# lazy-solana

./: .gitignore  Cargo.toml  README.md  main.rs  mod.rs  package-lock.json  tailwind-safelist.txt  tailwind.config.js
assets/: output.css
backend/: Cargo.toml
backend/src/: main.rs
canvas_component/: canvas.rs
fecth/: rpc_service.rs
frontend/: Cargo.toml
frontend/assets/: output.css
frontend/src/: main.rs
frontend/src/components/canvas_component/: canvas.rs
frontend/src/components/node_component/: mod.rs  node.rs  node_hook.rs
frontend/src/data/: node_data.rs
frontend/src/fecth/: mod.rs
src/: lib.rs  main.rs  theme.rs
src/components/: mod.rs
src/components/canvas_component/: canvas.rs  canvas_hook.rs  mod.rs
src/components/node_component/: node.rs  node_hook.rs
src/components/search_component/: search.rs
src/components/table_component/: mod.rs  table.rs  table_col.rs  table_data.rs
src/data/: node_data.rs
src/fecth/: mod.rs  node_fecth.rs  rpc_service.rs
src/idl_helper/: idl.rs  idl_decode.rs  idl_node.rs  mod.rs
src/pages/home/: layout.rs  mod.rs  page.rs
