[package]
name = "lazry-solana"
version = "0.1.0"
authors = ["lilidm <lightdemon17@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reslt = { path = "../reslt" }
# //tokio can't use in web

anyhow = "1.0.98"
async-trait = "0.1.88"
dioxus = { version = "0.6", features = ["router"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.4.0"
base64 = "0.22"

serde_json = "1.0"      # Or a compatible version
gloo-timers = "0.3.0"
dioxus-logger = "0.6.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
